--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 OPENAI_API_KEY= "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"
+OPENAI_API_KEY1 = "sk-proj-PAXluc3navbENuKiJV1YT3BlbkFJfyemsP8VABYSxQqDGGV7"
+
+pinecone_api_key =  "7cde47d4-3775-446e-9bf5-eb0b5c024477"
